git-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: git-test
  namespace:  openwhisk
spec:
  containers:
  - name: git-container
    image: ubuntu:latest  # 你也可以用 `alpine/git` 或 `bitnami/git`
    command: ["/bin/sh", "-c", "sleep 3600"]  # 让 Pod 持续运行
  restartPolicy: Never
