prome_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prometheus-work
  labels:
    app: prometheus
spec:
  selector:
    app: prometheus
  type: NodePort
  ports:
    - name: web
      port: 9090
      targetPort: http
